@@ -60,6 +60,9 @@ PIG-2011: Speed up TestTypedMap.java (dvryaboy)
 
 BUG FIXES
 
+PIG-2139: LogicalExpressionSimplifier optimizer rule should check if udf is
+ deterministic while checking if they are equal (thejas)
+
 PIG-2137: SAMPLE should not be pushed above DISTINCT (dvryaboy and thejas)
 
 PIG-2136: Implementation of Sample should use LessThanExpression 
